# cpp-implementation

./: CMakeLists.txt  README.md
script/: t
src/: main.cpp
src/data/: any.cpp  any.h  array.cpp  array.h  boolean.cpp  boolean.h  hashtable.cpp  hashtable.h  integer.cpp  integer.h  list.cpp  list.h  nil.cpp  nil.h  queue.cpp  queue.h  real.cpp  real.h  string.cpp  string.h  stringstream.cpp  stringstream.h  symbol.cpp  symbol.h  task.cpp  task.h  triple.cpp  triple.h
src/etor/: evaluator.cpp  evaluator.h  taskmanager.h
src/expr/: continuation.cpp  continuation.h  identifier.cpp  identifier.h
src/gc/: gc.cpp  gc.h
src/lexer/: lexer.cpp  lexer.h
src/memory/: gc.cpp  gc.h
src/ufo/: console.cpp  console.h  globals.cpp  globals.h  repl.cpp  repl.h  typeid.cpp  typeid.h  ufoexception.h
test/: gc_test.cpp  list_test.cpp  queue_test.cpp  test_gc.cpp  test_list.cpp  test_queue.cpp
